# math_functions

./: CMakeLists.txt  main.cpp
include/: MathFunctions.h
src/: MathFunctions.cpp
tests/: main_tests.cpp
